# liquidrandom

./: .gitignore  CLAUDE.md  README.md  STEP2.md  pyproject.toml
example_audio/: CLAUDE.md  conversation.py  generate.py  inspect_data.py  llm.py  pyproject.toml  run.sh  test_voice.py  tts.py  validator.py
seed_generation/: README.md  categories.py  config.py  dedup.py  generate.py  generate_hardcoded_parquet.py  hardcoded_instruction_complexities.py  hardcoded_reasoning_patterns.py  inspect_samples.py  llm.py  pyproject.toml  sampler.py  state.py  taxonomy.py  tool_sampler.py  tool_validator.py  uploader.py  validator.py
src/liquidrandom/: __init__.py  _detail.py  _loader.py  _registry.py
src/liquidrandom/models/: __init__.py  coding_task.py  domain.py  emotional_state.py  instruction_complexity.py  job.py  language.py  math_category.py  persona.py  reasoning_pattern.py  scenario.py  science_topic.py  tool_group.py  writing_style.py
tests/: test_e2e.py  test_loader.py  test_models.py  test_tool_group_models.py
